Update alignment of newsletter amenities.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -83,25 +83,24 @@
             <tr>
               <td width="50px"></td>
               <td width="400px" valign="top" class="bodyContent border-right border-bottom">
-                <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><span class="strong">{{page.rate}}</span></span>
-                <div class="newsletter-amenities2">(taxes are $0.07 PSF)</div>
+                <img class="amenities__icon" src="/images/newsletter/img/gs-newsletter-icon-1.png" width="45" height="45" alt="Rate" />
+                <span class="amenities__text"><span class="strong">{{page.rate}}</span></span>
               </td>
               <td width="400px" valign="top" class="bodyContent border-bottom">
-                <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><span class="strong">{{page.sq-footage}}</span> Square Feet</span>
+                <img class="amenities__icon" src="/images/newsletter/img/gs-newsletter-icon-2.png" width="45" height="45" alt="Rate" />
+                <span class="amenities__text"><span class="strong">{{page.sq-footage}}</span> Square Feet</span>
               </td>
               <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td width="400px" valign="top" class="bodyContent border-right">
-                <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><span class="strong">Available:</span> {{ page.date | date: "%m/%d/%Y" }}</span>
+                <img class="amenities__icon" src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
+                <span class="amenities__text"><span class="strong">Available:</span> {{ page.date | date: "%m/%d/%Y" }}</span>
               </td>
               <td width="400px" valign="top" class="bodyContent">
-                <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><strong><span class="strong">{{page.parking}}</span>
+                <img class="amenities__icon" src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
+                <span class="amenities__text"><strong><span class="strong">{{page.parking}}</span>
                 </td>
                 <td width="50px"></td>
               </tr>
