--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -157,7 +157,9 @@
               <td class="newsletter-footer-header" align="center" valign="top"><a class="email-link" href="{{site.contact.url}}/index.html?section=contact">CONTACT US</a></td>
             </tr>
             <tr>
-              <td class="newsletter-footer-bottom" align="center"><a class="email-link">{{site.data.contact.address}}</a> | <a class="newsletter-home-link email-link" href="{{site.data.contact.url}}">GROUNDSOURCE.NET</a>
+              <td class="newsletter-footer-bottom" align="center">
+                <a class="email-link">{{site.data.contact.address}}</a> | <a class="newsletter-home-link email-link" href="{{site.data.contact.url}}">GROUNDSOURCE.NET</a>
+                <div style="margin-top: 4px;">Chris Keller: {{site.data.contact.phone}}</div>
             </tr>
           </table>
         </td>
