--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
     </div>
     <div class="column">
       <div class="title"><a href="/experience.html">EXPERIENCE</a></div>
-      <a href="/experience.html?section=studies">Case Studies</a>
+      <!-- <a href="/experience.html?section=studies">Case Studies</a> -->
     </div>
     <div class="column">
       <div class="title"><a href="/about.html">ABOUT</a></div>
