--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -16,9 +16,10 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 0;
-    height: 49vh;
+    height: 100vh;
   }
   .bottom {
+    display: none;
     background-image: url(../images/experience/building.jpg);
     background-size: cover;
     background-repeat: no-repeat;
