Add landline to agent modal as well.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -85,7 +85,8 @@
                 <p class="no-margin position">{{agent.position}}</p>
                 <br />
                 <p class="no-margin email secondary-contact"><a href="mailto:{{agent.email}}">{{agent.email}}</a></p>
-                <p class="no-margin secondary-contact">M: {{agent.phone}}</p>
+                <p class="no-margin secondary-contact">Cell: {{agent.phone}}</p>
+                <p class="no-margin secondary-contact">Landline: {{site.data.contact.phone}}</p>
                 <a href="mailto:{{agent.email}}"><button class="rounded-red-button">work with {{agent.first_name}}</buton></a>
               </div>
             </div>
