--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -13,6 +13,7 @@ $bg-color-listing: #d8614b;
 $grey: #858585;
 $title-letter-spacing: 1.3px;
 $breakpoint-small: 768px;
+$breakpoint-small-desktop: 1200px;
 $breakpoint-medium: 1600px;
 $page-max-width: 1800px;
 $listings-text: #de6c62;
