--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -137,6 +137,18 @@
     width: 80%;
   }
 
+  .amenity__icon {
+    vertical-align: middle;
+    display: inline-block;
+    margin-right: 3px;
+  }
+
+  .amenity__detail {
+    vertical-align: middle;
+    display: inline-block;
+    width: 60%;
+  }
+
   .rent-label {
     background-color: #3678c6;
   }
@@ -153,7 +165,6 @@
     display: inline-block;
     padding-left: 30px;
     text-indent: -30px;
-    vertical-align: top;
   }
   .listing-preview {
     position: relative;
@@ -164,6 +175,9 @@
     color: gray;
     background-color: white;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
+    @media screen and (max-width: $breakpoint-small-desktop) {
+      width: 44%;
+    }
     > a {
       text-decoration: none;
     }
@@ -207,7 +221,9 @@
             > tr {
               > td {
                 width: 135px;
+                min-height: 75px;
                 padding: 6px;
+                vertical-align: top;
               }
             }
           }
