--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -137,6 +137,25 @@
     width: 80%;
   }
 
+  .amenity__table {
+    display: table;
+  }
+
+  .amenity__cell {
+    display: table-cell;
+    width: 50%;
+    padding: 4px;
+    vertical-align: middle;
+  }
+
+  .amenity__spacer {
+    /* min-height: 72px; */
+  }
+
+  .amenity__row {
+    display: table-row;
+  }
+
   .amenity__icon {
     vertical-align: middle;
     display: inline-block;
@@ -161,11 +180,6 @@
     background-color: $brand-blue;
   }
 
-  .wrapped-text {
-    display: inline-block;
-    padding-left: 30px;
-    text-indent: -30px;
-  }
   .listing-preview {
     position: relative;
     width: 31%;
@@ -210,8 +224,12 @@
       }
     }
     .listing-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
       line-height: 135%;
       padding: 0 12px 10px 12px;
+      height: calc(100% - 190px);
       .amenities {
         font-size: .8em;
         > table {
@@ -228,6 +246,7 @@
             }
           }
         }
+        /*
         > div {
           display: inline-block;
           width: 46%;
@@ -239,6 +258,7 @@
             width: 35px;
           }
         }
+        */
         > span {
           margin-left: 2px;
         }
