Increase font of newsletter contact info.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>GROUNDSOURCE</title>
+    <title>GROUNDSOURCE - {{page.address-line-1}}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     {% include header-links.html %}
