--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -273,13 +273,26 @@ a {
 
 .review-carousel {
   .slick-track {
-    height: 155px;
+    height: 250px;
   }
 }
 
 .review {
   outline: none;
   padding: 6px 60px;
+  position: relative;
+  .inner-review {
+    position: absolute;
+    top: 62%;
+    left: 120px;
+    transform: translateY(-50%);
+    width: 80%;
+    @media screen and (max-width: 1100px) {
+      position: static;
+      transform: none;
+      width: 100%;
+    }
+  }
 }
 
 #home-image {
@@ -1006,9 +1019,10 @@ a {
   .review-slideshow {
     padding: 0;
     .review {
-      padding-top: 0;
       display: flex;
       align-items: center;
+      padding: 0 100px;
+      margin-top: 2%;
     }
     .review::before {
       display: none;
