--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -6,7 +6,9 @@
     </div>
     <div>
       <img src="/images/location-icon.png" class="icon-small address"/>
-      <span class="underline address-line">{{site.data.contact.address}}</span>
+      <span class="underline address-line">{{site.data.contact.address1}}</span><br />
+      <span class="underline address-line">{{site.data.contact.address2}}</span><br />
+      <span class="underline address-line">{{site.data.contact.address3}}</span>
     </div>
   </div>
   <div class="contact-row">
