UI tweaks per Seth's notes

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -75,7 +75,7 @@
         </div>
         {% for agent in site.agents %}
         <div class="agent-details" id="agent-{{forloop.index}}">
-          <div class="content">
+          <div class="inner content">
             <div class="close-agent-detail"></div>
             <div class="header">
               <img src="{{agent.avatar}}" class="bio-pic"/>
