--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -102,9 +102,7 @@
               </p>
             </div>
           </div>
-          <div class="home-intro-right">
-            <img src="{{page.intro_image}}" />
-          </div>
+          <div class="home-intro-right" style="background-image: url('{{page.intro_image}}');"></div>
         </div>
         <div class="review-slideshow">
           <div class="inner">
