--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -53,22 +53,35 @@
 }
 
 @mixin modal {
-  display: none;
   position: fixed;
+  display: none;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 101;
-  background: rgba(86, 85, 84, 0.8);
+  background: rgba(0, 0, 0, 0.7);
   .inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 50%;
-    margin: 112px auto 0 auto;
+    max-height: 80vh;
     font-size: 1.3em;
     padding-bottom: 10px;
     text-align: center;
     background-color: white;
-    position: relative;
     max-width: 1200px;
+    @media screen and (max-width: $breakpoint-small) {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: none;
+      width: 100%;
+      height: 100%;
+      max-height: 100%;
+      overflow-y: auto;
+    }
   }
 }
