Remove background color from main section

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -899,13 +899,13 @@ a {
   padding: 1.5em 0;
 }
 
-.services-1 {
-  background-color: $primary-color-darker-darker;
-}
+// .services-1 {
+//   background-color: $primary-color-darker-darker;
+// }
 
-.services-2 {
-  background-color: $primary-color-lighter;
-}
+// .services-2 {
+//   background-color: $primary-color-lighter;
+// }
 
 .footer {
   .inner {
