Filter out non-visible listings.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -88,7 +88,7 @@
           </div>
           </div>
           <div id="properties" class="flexbox listings">
-            {% assign listings = site.listings | where: "layout", "listing" %}
+            {% assign listings = site.listings | where: "layout", "listing" | where: "hidden", "false" %}
             {% for listing in listings %}
               <div class="listing-preview" data-location="{{listing.address-line-2}}" data-available="{{listing.available}}" data-lease="{{listing.lease}}" data-buy="{{listing.buy}}" data-rooms="{{listing.rooms}}" data-size="{{listing.sq-footage}}" data-price="{{listing.price}}">
                 <a href={{listing.url}}>
