Add subllease option to listing index preview.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -117,6 +117,9 @@
                               {% if listing.lease %}
                                 <div class="listing-label lease-label">For Lease</div>
                               {% endif %}
+                              {% if listing.lease %}
+                                <div class="listing-label lease-label">For Sublease</div>
+                              {% endif %}
                               {% if listing.sale %}
                                 <div class="listing-label rent-label">For Sale</div>
                               {% endif %}
