Add sublease option on the Newsletter as well. On listings index, use the blue label to differentiate sublease from lease.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -118,7 +118,7 @@
                                 <div class="listing-label lease-label">For Lease</div>
                               {% endif %}
                               {% if listing.sublease %}
-                                <div class="listing-label lease-label">For Sublease</div>
+                                <div class="listing-label sublease-label">For Sublease</div>
                               {% endif %}
                               {% if listing.sale %}
                                 <div class="listing-label rent-label">For Sale</div>
