--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -36,6 +36,9 @@
                 {% if page.lease %}
                 <div class="listing-label-newsletter lease-label">FOR LEASE</div>
                 {% endif %}
+                {% if page.sublease %}
+                <div class="listing-label-newsletter lease-label">FOR SUBLEASE</div>
+                {% endif %}
                 {% if page.sale %}
                 <div class="listing-label-newsletter rent-label">FOR SALE</div>
                 {% endif %}
