--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -53,7 +53,7 @@
         <div class="features">
           <div class="menu">
             <div class="highlights">
-              <h2 class="sidebar-header"><strong>PROPERTY</strong><span class="subdued"> HIGHLIGHTS</span></h2>
+              <h2 class="sidebar-header"><strong>HIGHLIGHTS</strong></h2>
               <ul class="list">
                 {% for highlight in page.highlights %}
                   <li>{{ highlight }}</li>
@@ -126,7 +126,7 @@
                       <div>{{page.address-line-1}}</div>
                       <div>{{page.address-line-2}}</div>
                     </div>
-                    <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
+                    <h2 class="sidebar-header"><strong>HIGHLIGHTS</strong></h2>
                     <hr class ="light-line">
                     <ul class="amenity-list">
                       {% for highlight in page.highlights %}
