--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -116,7 +116,7 @@
             <tr>
               <td width="50px"></td>
               <td width="800px" class="padding-bottom">
-                <span class="list-header">BUILDING HIGHLIGHTS</span>
+                <span class="list-header">HIGHLIGHTS</span>
                 <ul class="newsletter-highlights">
                   {% for highlight in page.highlights %}
                   <li>{{ highlight }}</li>
