--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -99,7 +99,14 @@
               <td width="50px"></td>
               <td width="400px" valign="top" class="bodyContent border-right">
                 <img class="amenities__icon" src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
-                <span class="amenities__text"><span class="strong">Available:</span><span id="available-date" data-date="{{ page.date }}"> {{ page.date | date: "%m/%d/%Y" }}</span></span>
+                <span class="amenities__text">
+                  <div><span class="strong">Available:</span><span id="available-date" data-date="{{ page.date }}"> {{ page.date | date: "%m/%d/%Y" }}</div>
+                  <!-- dont try to display terms if it's just an empty string -->
+                  {% if page.terms == '' %}
+                  {% elsif page.terms %}
+                    <div><span class="strong">Terms:</span><span id="available-date" data-date="{{ page.date }}"> {{ page.terms}}</div>
+                  {% endif %}
+                </span>
               </td>
               <td width="400px" valign="top" class="bodyContent">
                 <img class="amenities__icon" src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
