Update "Terms" to "Term"

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -108,7 +108,7 @@
                   <!-- dont try to display terms if it's just an empty string -->
                   {% if page.terms == '' %}
                   {% elsif page.terms %}
-                    <div><span class="strong">Terms:</span><span id="available-date" data-date="{{ page.date }}"> {{ page.terms}}</div>
+                    <div><span class="strong">Term:</span><span id="available-date" data-date="{{ page.date }}"> {{ page.terms}}</div>
                   {% endif %}
                 </span>
               </td>
