Place quotes around background-image URL so that the slideshow doesn't break if a filename has spaces (also to make it valid.)

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -159,7 +159,7 @@
                     <div class="listing-carousel">
                       {% for img-src in page.gallery-images %}
                         <div class="listing-image-slide">
-                          <div class="listing-image" style="background-image: url({{ img-src }})"></div>
+                          <div class="listing-image" style="background-image: url('{{ img-src }}')"></div>
                         </div>
                       {% endfor %}
                     </div>
